fix: minor styling optimizations: spacings

--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -103,6 +103,7 @@ img {
 
 .o-list__link-wrapper {
   display: flex;
+  margin-bottom: 0;
 
   li {
     list-style-type: none;
